[package]
name = "youngoor"
version = "0.1.0"
authors = ["ywxt <ywxtcwh@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error
thiserror = "1.0"

# syntax
async-trait = "0.1"

# network
reqwest = { version = "0.10", feature = ["json"] }

serde = { version = "1.0", features = ["derive"] }