[package]
name = "youngoor"
version = "0.1.0"
authors = ["ywxt <ywxtcwh@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error
thiserror = "1.0"

# async
async-trait = "0.1"
tokio = { version = "0.2", features = ["full"] }

# network
reqwest = { version = "0.10", features = ["json"] }

#seq
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
serde_repr = "0.1"