[package]
name = "youngoor"
version = "0.1.0"
authors = ["ywxt <ywxtcwh@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error
thiserror = "1.0"

# async
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# network
reqwest = { version = "0.11.0", features = ["json"] }

#seq
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
